--- a/Translations/German/text-infos-change.xml
+++ b/Translations/German/text-infos-change.xml
@@ -4865,7 +4865,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_GAME_OPTION_PRESET_ONE_CITY_HELP</zType>
-		<de-DE>Du kannst nicht mehr als eine Stadt gründen.</de-DE>
+		<de-DE>Ihr könnt nicht mehr als eine Stadt gründen.</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_GAME_OPTION_PRESET_ROLE_PLAYING</zType>
