--- a/Translations/German/text-miscOptions-change.xml
+++ b/Translations/German/text-miscOptions-change.xml
@@ -11,7 +11,7 @@
     </Entry>
     <Entry>
         <zType>TEXT_MISCOPTION_EMAIL_DESC</zType>
-        <de-DE>Deine email address wird für cloud Spiele (wenn sie verfügbar werden) benutzt, oder um dich im Notfall zu kontaktieren wenn du ein Bug mitteilst.</de-DE>
+        <de-DE>Deine email address wird für cloud Spiele (wenn sie verfügbar werden) benutzt, oder um dich im Notfall zu kontaktieren wenn ihr einen Bug mitteilt.</de-DE>
     </Entry>
     <Entry>
         <zType>TEXT_MISCOPTION_CAMERA_FOLLOW_AI_MOVES_NAME</zType>
